fixed welcoem text positioning on mobile

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+.splash-top {
+  position: relative;
+}
+
 #splash-page-img {
   object-fit: cover;
   width: 100%;
